did some corrections

--- a/sass/components/_xray.scss
+++ b/sass/components/_xray.scss
@@ -32,6 +32,12 @@ header{
   margin: auto;
 }
 
+.box {
+  height: 70px;
+  width: 400px;
+}
+
+
 .nav_logo {
   align-items: center;
   display: flex;
