--- a/sass/components/_xray.scss
+++ b/sass/components/_xray.scss
@@ -32,11 +32,17 @@ header{
   margin: auto;
 }
 
-.box {
+#box3 {
   height: 70px;
   width: 400px;
+  background-color: rgb(40,205,245);
+  color: white;
 }
 
+#box3:hover {
+  color: black;
+  background-color: white;
+}
 
 .nav_logo {
   align-items: center;
@@ -79,6 +85,42 @@ header{
   background-color: white;
   margin-top: 5px;
 }
+
+p, h2 {
+  animation: fade linear both;
+  animation-timeline: view();
+  animation-range: entry 50% cover 50%;
+}
+
+// h2 {
+//   background: linear-gradient(90deg, black, transparent);
+//   background-size: 200%;
+//   animation: reveal both linear;
+//   animation-timeline: view();
+//   background-repeat: no-repeat;
+//   animation-range: entry 50% cover 50%;
+//   background-clip: text;
+//   -webkit-background-clip: text;
+//   color: transparent;
+// }
+
+@keyframes fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+// @keyframes reveal {
+//   from {
+//     background-position-x: 200%;
+//   }
+//   to {
+//     background-position-x: 0%;
+//   }
+// }
 
 .content_nav{
   grid-column: 3;
@@ -144,6 +186,8 @@ header{
   display: flex;
   line-height: 30px;
   padding: 50px;
+  font-size: 20px;
+  line-height: 50px;
 }
 
 
@@ -425,7 +469,7 @@ model-viewer {
   width: auto;
   max-width: 1200px;
   height: 700px;
-  background-color: #efefef;
+  background-color: rgb(130, 174, 185);
   margin: 0 auto;
 }
 
@@ -446,10 +490,10 @@ model-viewer {
 
 .HotspotAnnotation{
   visibility: hidden;
-  background: #fff;
+  background: rgb(40,205,245);
   border-radius: 4px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
-  color: rgba(0, 0, 0, 0.8);
+  color: rgba(255, 255, 255, 0.8);
   display: block;
   font-family: Futura, Helvetica Neue, sans-serif;
   font-size: 18px;
@@ -465,7 +509,7 @@ model-viewer {
 }
 
 .HotspotAnnotation p {
-  color: #333;
+  color: #000000;
   line-height: 22px;
   font-weight: 300;
 }
